--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -4,8 +4,10 @@
 # model remove the '{}' from the fixture names and add the columns immediately
 # below each fixture, per the syntax in the comments below
 #
-one: {}
-# column: value
-#
-two: {}
-# column: value
+
+sano:
+  name: sanodesukedo
+  email: sanoo@sano
+  encrypted_password: <%= Devise::Encryptor.digest(User, 'password') %>
+  address: sanodesukedo
+  phonenumber: 05099993333
