--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -11,3 +11,10 @@ sano:
   encrypted_password: <%= Devise::Encryptor.digest(User, 'password') %>
   address: sanodesukedo
   phonenumber: 05099993333
+
+orochi:
+  name: orochimaru
+  email: oro@oro
+  encrypted_password: <%= Devise::Encryptor.digest(User, 'password') %>
+  address: orochidesukedo
+  phonenumber: 05099994444
